Fix alignment issue in .title class and cleanup CSS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,8 @@ h1 h2 h3 {
 .title {
   display: flex;
   justify-content: center;
-  align=items: center;
+  align-items: center;
+	padding: 3em;
 }
 
 html {
